removed old css styles, back to plain html

--- a/src/main/webapp/assets/css/SHARED.css
+++ b/src/main/webapp/assets/css/SHARED.css
@@ -1,61 +1,61 @@
-* {
-    box-sizing: border-box;
-}
+/** {*/
+/*    box-sizing: border-box;*/
+/*}*/
 
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    text-align: center;
-    align-content: center;
-    align-items: center;
-    font: var(--font);
-}
+/*body {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    overflow: hidden;*/
+/*    text-align: center;*/
+/*    align-content: center;*/
+/*    align-items: center;*/
+/*    font: var(--font);*/
+/*}*/
 
-button {
-    background: var(--sg-gold);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
+/*button {*/
+/*    background: var(--sg-gold);*/
+/*    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
+/*    border-radius: 16px;*/
 
-    border:none;
-    cursor: pointer;
+/*    border:none;*/
+/*    cursor: pointer;*/
 
-    margin: 10px;
-    font-style: normal;
-    font-weight: 30;
-    font-size: var(--font-size-button);
-    line-height: 32px;
-    /* or 89% */
+/*    margin: 10px;*/
+/*    font-style: normal;*/
+/*    font-weight: 30;*/
+/*    font-size: var(--font-size-button);*/
+/*    line-height: 32px;*/
+/*    !* or 89% *!*/
 
-    align-items: center;
-    text-align: center;
+/*    align-items: center;*/
+/*    text-align: center;*/
 
-    color: #FFFFFF;
-}
+/*    color: #FFFFFF;*/
+/*}*/
 
-button:hover {
-    background-color: var(--sg-gold-clicked);
-    text-decoration: none;
-}
+/*button:hover {*/
+/*    background-color: var(--sg-gold-clicked);*/
+/*    text-decoration: none;*/
+/*}*/
 
-:focus {
-    border: var(--sg-bronze);
-    color: #555555;
-}
+/*:focus {*/
+/*    border: var(--sg-bronze);*/
+/*    color: #555555;*/
+/*}*/
 
-/*Remove */
-a {
-    color: white;
-    padding-right: 10px;
-    padding-left: 10px;
-    text-decoration: none;
-}
+/*!*Remove *!*/
+/*a {*/
+/*    color: white;*/
+/*    padding-right: 10px;*/
+/*    padding-left: 10px;*/
+/*    text-decoration: none;*/
+/*}*/
 
-.main {
-    display: inline-flex;
-}
+/*.main {*/
+/*    display: inline-flex;*/
+/*}*/
 
-.btn-holder {
-    display:flex;
-    flex-direction: column;
-}
+/*.btn-holder {*/
+/*    display:flex;*/
+/*    flex-direction: column;*/
+/*}*/
