--- a/src/main/webapp/assets/css/index.css
+++ b/src/main/webapp/assets/css/index.css
@@ -1,76 +1,4 @@
 body
 {
-    background: linear-gradient(102.63deg, #6FC2D9 0%, #D7B358 100%) fixed;
-}
-
-button
-{
-    height: 80px;
-    font-size: var(--font-size-header);
-    border: 4px solid #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
-}
-
-@media only screen and (min-width: 410px)
-{
-    button
-    {
-        width: 390px;
-    }
-}
-
-@media only screen and (max-width: 409px)
-{
-    button
-    {
-        width: 80vw;
-    }
-}
-
-@media only screen and (max-width: 210px)
-{
-    button
-    {
-        font-size: 16px;
-    }
-}
-
-@media only screen and (min-width:770px) {
-    .banner
-    {
-        height: 202px;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
-
-        align-content: center;
-
-        background: rgba(255, 255, 255,1);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-    img {
-        height:100%;
-        object-fit:scale-down;
-        padding: 10px 30px;
-    }
-}
-@media only screen and (max-width:769px)
-{
-    .banner
-    {
-        height: 20vh;
-        margin-top: 5vh;
-        margin-bottom: 5vh;
-
-        align-content: center;
-
-        background: rgba(255, 255, 255, 1);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    }
-    img
-    {
-        height: 100%;
-        object-fit:scale-down;
-        padding: 10px 30px;
-    }
+    background: antiquewhite;
 }
