--- a/src/main/webapp/assets/css/SHARED.css
+++ b/src/main/webapp/assets/css/SHARED.css
@@ -1,61 +1,106 @@
-/** {*/
-/*    box-sizing: border-box;*/
-/*}*/
-
-/*body {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    overflow: hidden;*/
-/*    text-align: center;*/
-/*    align-content: center;*/
-/*    align-items: center;*/
-/*    font: var(--font);*/
-/*}*/
-
-/*button {*/
-/*    background: var(--sg-gold);*/
-/*    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
-/*    border-radius: 16px;*/
-
-/*    border:none;*/
-/*    cursor: pointer;*/
-
-/*    margin: 10px;*/
-/*    font-style: normal;*/
-/*    font-weight: 30;*/
-/*    font-size: var(--font-size-button);*/
-/*    line-height: 32px;*/
-/*    !* or 89% *!*/
-
-/*    align-items: center;*/
-/*    text-align: center;*/
-
-/*    color: #FFFFFF;*/
-/*}*/
-
-/*button:hover {*/
-/*    background-color: var(--sg-gold-clicked);*/
-/*    text-decoration: none;*/
-/*}*/
-
-/*:focus {*/
-/*    border: var(--sg-bronze);*/
-/*    color: #555555;*/
-/*}*/
-
-/*!*Remove *!*/
-/*a {*/
-/*    color: white;*/
-/*    padding-right: 10px;*/
-/*    padding-left: 10px;*/
-/*    text-decoration: none;*/
-/*}*/
-
-/*.main {*/
-/*    display: inline-flex;*/
-/*}*/
-
-/*.btn-holder {*/
-/*    display:flex;*/
-/*    flex-direction: column;*/
-/*}*/
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600);
+* {
+    box-sizing: border-box;
+}
+body {
+    font-family: 'open sans', helvetica, arial, sans;
+    background: url(http://farm8.staticflickr.com/7064/6858179818_5d652f531c_h.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.form {
+    width: 40%;
+    min-width: 320px;
+    max-width: 475px;
+    background: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+}
+@media (max-width: 40em) {
+    .form {
+        width: 95%;
+        position: relative;
+        margin: 2.5% auto 0 auto;
+        left: 0%;
+        -webkit-transform: translate(0%,0%);
+        -moz-transform: translate(0%,0%);
+        -o-transform: translate(0%,0%);
+        -ms-transform: translate(0%,0%);
+        transform: translate(0%,0%);
+    }
+}
+.form form {
+    display: block;
+    width: 100%;
+    padding: 2em;
+}
+.form h2 {
+    width: 100%;
+    color: #5d5d5d;
+    font-family: 'open sans condensed';
+    font-size: 1.35em;
+    display: block;
+    background: #2a2a2a;
+    text-transform: uppercase;
+    padding: .75em 1em .75em 1.5em;
+    box-shadow: inset 0px 1px 1px rgba(255,255,255,0.05);
+    border: 1px solid #1d1d1d;
+    margin: 0;
+    font-weight: 200;
+}
+.form input {
+    display: block;
+    margin: auto auto;
+    width: 100%;
+    margin-bottom: 2em;
+    padding: .5em 0;
+    border: none;
+    border-bottom: 1px solid #eaeaea;
+    padding-bottom: 1.25em;
+    color: #757575;
+}
+.form input:focus {
+    outline: none;
+}
+.form .btn {
+    display: inline-block;
+    background: #1fb5bf;
+    border: 1px solid #1ba0a9;
+    padding: .5em 2em;
+    color: white;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255,0.2);
+    text-decoration: none;
+}
+.form .btn:hover {
+    background: #23cad5;
+}
+.form .btn:active {
+    background: #1fb5bf;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.1);
+}
+.form .btn:focus {
+    outline: none;
+}
+.form .forgot {
+    color: #33d3de;
+    line-height: .5em;
+    position: relative;
+    top: 2.5em;
+    text-decoration: none;
+    font-size: .75em;
+    margin: 0;
+    padding: 0;
+    float: right;
+}
+.form .forgot:hover {
+    color: #1ba0a9;
+}
