--- a/src/main/webapp/assets/css/dash.css
+++ b/src/main/webapp/assets/css/dash.css
@@ -1,5 +1,64 @@
-.form{
+/* Global styles */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.logo {
+    float: left;
+}
+/* ~~ Top Navigation Bar ~~ */
+
+#navigation-container {
+    width: 1200px;
+    margin: 0 auto;
+    height: 70px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+}
+
+.navigation-bar {
+    background-color: #2a2a2a;
+    height: 70px;
+    width: 100%;
+    display: flex;
+}
+.navigation-bar img{
+    float:left;
+    height: 100%;
+    max-width: 100%;
+    margin-right: 10px;
+}
+.navigation-bar ul {
+    padding: 0px;
+    margin: 0px;
     text-align: center;
+    display:inline-block;
+    vertical-align:top;
+}
+
+.navigation-bar li {
+    list-style-type: none;
+    padding: 0px;
+    height: 24px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    display: inline;
+}
+.navigation-bar a:hover{
+    color: #23cad5;
+}
+
+.navigation-bar li a {
+    color: antiquewhite;
+    font-size: 16px;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    line-height: 70px;
+    padding: 5px 15px;
+    opacity: 0.7;
+}
+
+#menu {
+    float: right;
 }
