--- a/src/main/webapp/assets/css/dash.css
+++ b/src/main/webapp/assets/css/dash.css
@@ -7,6 +7,7 @@ body {
 .logo {
     float: left;
 }
+
 /* ~~ Top Navigation Bar ~~ */
 
 #navigation-container {
@@ -19,33 +20,38 @@ body {
 
 .navigation-bar {
     background-color: #2a2a2a;
-    height: 70px;
-    width: 100%;
-    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
 }
-.navigation-bar img{
-    float:left;
+
+.navigation-bar img {
+    float: left;
     height: 100%;
     max-width: 100%;
     margin-right: 10px;
 }
+
 .navigation-bar ul {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     text-align: center;
-    display:inline-block;
-    vertical-align:top;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .navigation-bar li {
-    list-style-type: none;
-    padding: 0px;
+    list-style: none;
+    padding: 0;
     height: 24px;
     margin-top: 4px;
     margin-bottom: 4px;
     display: inline;
 }
-.navigation-bar a:hover{
+
+.navigation-bar a:hover {
     color: #23cad5;
 }
 
@@ -58,6 +64,8 @@ body {
     padding: 5px 15px;
     opacity: 0.7;
 }
+
+
 
 #menu {
     float: right;
