--- a/src/main/webapp/assets/css/shop.css
+++ b/src/main/webapp/assets/css/shop.css
@@ -72,12 +72,12 @@ a {
     justify-content: center;
 }
 
-.cart-btn i {
+.add-to-cart i {
     font-size: 18px;
     margin-right: 10px;
 }
 
-.cart-btn:hover {
+.add-to-cart:hover {
     background: #ff9800;
 }
 
@@ -195,5 +195,60 @@ h1 {
     color: antiquewhite;
     text-shadow: 1px 1px #000;
 }
+/* Hamburger button */
+.hamburger {
+    display: inline-block;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    color: #fff;
+}
+
+.cart-quantity {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: #ff4d4d;
+    color: #fff;
+    border-radius: 50%;
+    padding: 3px 7px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.order-review-panel {
+    display: none;
+    position: fixed;
+    top: 70px;
+    right: 0;
+    width: 300px;
+    max-height: 80vh;
+    overflow-y: auto;
+    background-color: #257ece;
+    border-left: 1px solid #dee2e6;
+    padding: 16px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 100;
+}
+
+.order-review-panel h3 {
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.order-review-panel ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 16px;
+}
+
+.order-review-panel ul li {
+    margin-bottom: 8px;
+}
+
 
 
