image is corrected

--- a/src/main/webapp/assets/css/dash.css
+++ b/src/main/webapp/assets/css/dash.css
@@ -73,6 +73,7 @@ body {
 .search-container {
     position: relative;
     margin-left: 20px;
+    order: 3;
 }
 
 #search-bar {
@@ -103,3 +104,4 @@ body {
 #menu {
     float: right;
 }
+
